[gd_scene load_steps=12 format=3 uid="uid://csedbbm8v73kt"]

[ext_resource type="PackedScene" uid="uid://cudoxii0cxlr" path="res://Scenes/LogSymptoms.tscn" id="2_3iuye"]
[ext_resource type="Script" path="res://Scripts/MainController.gd" id="2_f0d3i"]
[ext_resource type="Texture2D" uid="uid://bx0ij31u2nnan" path="res://Sprites/Background/MainBackground.jpg" id="3_foqcg"]
[ext_resource type="Texture2D" uid="uid://b5tuojfbvwt3n" path="res://Sprites/Navigation Buttons/LogSymptoms.png" id="4_of6ru"]
[ext_resource type="Script" path="res://Scripts/ButtonLoader.gd" id="4_xawvl"]
[ext_resource type="Texture2D" uid="uid://cqgagdbuw6jfd" path="res://Sprites/Navigation Buttons/Calendar.png" id="6_m2td1"]
[ext_resource type="Texture2D" uid="uid://dygeto8ng6n64" path="res://Sprites/Background/SomeGrass.png" id="7_u114f"]
[ext_resource type="Texture2D" uid="uid://dr2m67hf3vv1k" path="res://Sprites/HeartfeltHealthLogo.png" id="8_y0bvc"]

[sub_resource type="LabelSettings" id="LabelSettings_lk47r"]
line_spacing = 0.0
font_size = 150
outline_size = 10
outline_color = Color(0.376471, 0.482353, 0.341176, 1)

[sub_resource type="LabelSettings" id="LabelSettings_g3cd7"]
font_size = 55
outline_size = 10
outline_color = Color(0.376471, 0.482353, 0.341176, 1)

[sub_resource type="LabelSettings" id="LabelSettings_qluqt"]
font_size = 22
outline_size = 3
outline_color = Color(0.376471, 0.482353, 0.341176, 1)

[node name="Home" type="Node2D"]
script = ExtResource("2_f0d3i")
symptomScene = ExtResource("2_3iuye")

[node name="BackgroundColor" type="ColorRect" parent="."]
offset_right = 576.0
offset_bottom = 1024.0
color = Color(0.878431, 0.937255, 0.768627, 1)

[node name="MainBackground" type="TextureRect" parent="."]
offset_top = 203.0
offset_right = 576.0
offset_bottom = 1026.0
texture = ExtResource("3_foqcg")
expand_mode = 5

[node name="DayDisplay" type="Node2D" parent="MainBackground"]

[node name="DayNumber" type="Label" parent="MainBackground/DayDisplay"]
offset_left = 152.0
offset_top = 284.0
offset_right = 324.0
offset_bottom = 489.0
text = "err
"
label_settings = SubResource("LabelSettings_lk47r")
horizontal_alignment = 2

[node name="DayAffix" type="Label" parent="MainBackground/DayDisplay"]
offset_left = 315.0
offset_top = 323.0
offset_right = 389.0
offset_bottom = 389.0
text = "err"
label_settings = SubResource("LabelSettings_g3cd7")

[node name="NextLabel" type="Label" parent="MainBackground"]
layout_mode = 0
offset_left = 314.0
offset_top = 493.0
offset_right = 474.0
offset_bottom = 619.0
text = "error"
label_settings = SubResource("LabelSettings_qluqt")

[node name="LogSymptomsButton" type="Button" parent="."]
offset_left = 68.0
offset_top = 316.0
offset_right = 769.0
offset_bottom = 579.0
scale = Vector2(0.29, 0.29)
icon = ExtResource("4_of6ru")
flat = true

[node name="Grass" type="TextureRect" parent="."]
offset_top = -37.0
offset_right = 576.0
offset_bottom = 208.738
texture = ExtResource("7_u114f")
expand_mode = 5
flip_v = true

[node name="CalendarButton" type="Button" parent="."]
offset_left = 474.0
offset_top = 147.0
offset_right = 632.0
offset_bottom = 305.0
scale = Vector2(0.65, 0.65)
icon = ExtResource("6_m2td1")
flat = true
script = ExtResource("4_xawvl")
scene = "res://Scenes/Calender.tscn"

[node name="Logo" type="TextureRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 158.0
offset_top = 152.0
offset_right = 325.0
offset_bottom = 218.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.6, 1.6)
texture = ExtResource("8_y0bvc")

[connection signal="button_down" from="LogSymptomsButton" to="." method="_on_log_symptoms_button_button_down"]
[connection signal="button_down" from="CalendarButton" to="CalendarButton" method="_on_button_down"]
